s/Eq./Equation and adds paranthesis

--- a/template_submissions_to_scientific_reports/supplementary_information.tex
+++ b/template_submissions_to_scientific_reports/supplementary_information.tex
@@ -137,7 +137,7 @@ can be written as a ratio of two quadratic forms on \(R^4\).
     \endgroup
 
     This can be re written in a matrix format given by
-    Eq.~\ref{eq:cross_product_coeffs}.
+    Equation~(\ref{eq:cross_product_coeffs}).
 
     \begin{equation}\label{eq:cross_product_coeffs}
         \resizebox{0.9\linewidth}{!}{\arraycolsep=2.5pt%
@@ -161,7 +161,7 @@ can be written as a ratio of two quadratic forms on \(R^4\).
     \endgroup
 
     and the expression can be written using a matrix format as
-    Eq.~\ref{eq:linear_coeffs}.
+    Equation~(\ref{eq:linear_coeffs}).
 
     \begin{equation}\label{eq:linear_coeffs}
         \resizebox{0.60\linewidth}{!}{\arraycolsep=2.5pt%
@@ -170,14 +170,14 @@ can be written as a ratio of two quadratic forms on \(R^4\).
     \end{equation}
 
     Finally, the constant term of the numerator, which is obtained by
-    substituting $p=(0, 0, 0, 0)$, is given by Eq.~\ref{eq:constant}.
+    substituting $p=(0, 0, 0, 0)$, is given by Equation~(\ref{eq:constant}).
 
     \begin{equation}\label{eq:constant}
     - P q_{2} + P + T q_{4}
     \end{equation}
 
-    Combining Eq.~\ref{eq:cross_product_coeffs}, Eq.~\ref{eq:linear_coeffs} and
-    Eq.~\ref{eq:constant} gives that the numerator of \(u_q(p)\) can be written
+    Combining Equation~(\ref{eq:cross_product_coeffs}), Equation~(\ref{eq:linear_coeffs}) and
+    Equation~(\ref{eq:constant}) gives that the numerator of \(u_q(p)\) can be written
     as,
 
     \begingroup
@@ -238,7 +238,7 @@ The set \(S_q\) is defined as all the possible combinations of:
 \end{equation}
 
 \begin{proof}
-    The optimisation problem of Eq.~\ref{eq:mo_tournament_optimisation}
+    The optimisation problem of Equation~(\ref{eq:mo_tournament_optimisation})
 
     \begin{equation}\label{eq:mo_tournament_optimisation}
         \begin{aligned}
@@ -337,7 +337,7 @@ The set \(S_q\) is defined as all the possible combinations of:
         \displaystyle\sum\limits_{i=1} ^ {N} \frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)} & \neq 0.
     \end{align}
 
-    The optimal solution to Eq.~\ref{eq:mo_tournament_optimisation} is the point
+    The optimal solution to Equation~(\ref{eq:mo_tournament_optimisation}) is the point
     from $S_q$ for which the utility is maximised.
 \end{proof}
 
@@ -346,7 +346,7 @@ The set \(S_q\) is defined as all the possible combinations of:
 In a tournament of \(N\) players \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
 for \(q^{(i)} \in \R_{[0, 1]} ^ 4\)
 defection is stable if the transition probabilities of the
-opponents satisfy conditions Eq. \ref{eq:defection_condition_one} and Eq. \ref{eq:defection_condition_two}.
+opponents satisfy conditions Equation~(\ref{eq:defection_condition_one}) and Equation~(\ref{eq:defection_condition_two}).
 
 \begin{equation}\label{eq:defection_condition_one}
     \sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)}) \leq 0
