--- a/template_submissions_to_scientific_reports/main.tex
+++ b/template_submissions_to_scientific_reports/main.tex
@@ -135,12 +135,12 @@ In~\cite{Nowak1989} it was shown that it is not necessary to simulate the play
 of a strategy $p$ against a memory-one opponent $q$. Rather this exact behaviour
 can be modeled as a stochastic process, and more specifically as a Markov chain
 whose corresponding transition matrix \(M\) is
-given by Eq.~\ref{eq:transition_matrix}. The long run steady state probability
+given by Equation~(\ref{eq:transition_matrix}). The long run steady state probability
 vector \(v\), which is the solution to \(v M = v\), can be
-combined with the payoff matrices of Eq.~\ref{equ:pd_definition} to give the expected
+combined with the payoff matrices of Equation~(\ref{equ:pd_definition}) to give the expected
 payoffs for each player. More specifically, the utility for a memory-one
 strategy \(p\) against an opponent \(q\), denoted as \(u_q(p)\), is given by
-Eq.~\ref{eq:press_dyson_utility}.
+Equation~(\ref{eq:press_dyson_utility}).
 
 \begin{equation}\label{eq:transition_matrix}
     \resizebox{.5\hsize}{!}{$\input{tex/m_matrix.tex}$}
@@ -211,7 +211,7 @@ against \(N\) opponents is given by:
        {\prod\limits_{i=1} ^ N (\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)})}.
 \end{align}
 
-Eq.~(\ref{eq:tournament_utility}) is the average score (using Eq.~(\ref{eq:optimisation_quadratic})) against the set of opponents.
+Equation~(\ref{eq:tournament_utility}) is the average score (using Equation~(\ref{eq:optimisation_quadratic})) against the set of opponents.
 
 Estimating the utility of a memory-one strategy against any number of opponents
 without simulating the interactions is the main result used in the rest of this manuscript.
@@ -241,7 +241,7 @@ optimal points. This is also intuitive. The best response against a cooperator,
 \(p=(\frac{1}{2}, 0, 0, 0)\) and \(p=(\frac{1}{2}, 0, 0, \frac{1}{2})\) are also
 best responses. The approach taken here is to introduce a compact way of
 constructing the discrete candidate set of all local optimal points, and evaluating
-the objective function Eq.~\ref{eq:tournament_utility}. This gives the best
+the objective function Equation~(\ref{eq:tournament_utility}). This gives the best
 response memory-one strategy. The approach is given in
 Theorem~\ref{memone_group_best_response}.
 
@@ -307,7 +307,7 @@ identified interesting results such as the appearance of self recognition
 mechanisms when training strategies using evolutionary algorithms in Moran
 processes~\cite{Knight2018}. This aspect of reinforcement learning can be done for
 best response memory-one strategies by incorporating the strategy itself in the
-objective function as shown in Eq.~\ref{eq:mo_tournament_optimisation}.
+objective function as shown in Equation~(\ref{eq:mo_tournament_optimisation}).
 \(K\) is the number of self interactions that will take place.
 
 \begin{equation}\label{eq:mo_evolutionary_optimisation}
@@ -489,7 +489,7 @@ that can occur, furthermore, Gambler also makes a probabilistic decision of
 cooperating in the opening move. Thus, Gambler is a function \(f: \{\text{C,
 D}\} \rightarrow [0, 1]_{\R}\). This can be hard coded as an element
 of \([0, 1]_{\R} ^ {16 + 1}\), one probability for each outcome plus the opening
-move. Hence, compared to Eq.~\ref{eq:mo_tournament_optimisation}, finding an
+move. Hence, compared to Equation~(\ref{eq:mo_tournament_optimisation}), finding an
 optimal Gambler is a 17 dimensional problem given by:
 
 \begin{equation}\label{eq:gambler_optimisation}
@@ -500,9 +500,9 @@ optimal Gambler is a 17 dimensional problem given by:
     \end{aligned}
 \end{equation}
 
-Note that Eq. \ref{eq:tournament_utility} can not be used here for the utility
+Note that Equation~(\ref{eq:tournament_utility}) can not be used here for the utility
 of Gambler, and actual simulated players are used. This is done using~\cite{axelrodproject}
-with 500 turns and 200 repetitions, moreover, Eq. \ref{eq:gambler_optimisation}
+with 500 turns and 200 repetitions, moreover, Equation~(\ref{eq:gambler_optimisation})
 is solved numerically using Bayesian optimisation.
 
 Similarly to previous sections, a large data set has been generated with
@@ -557,7 +557,7 @@ as stated in Lemma~\ref{lemma:stability_of_defection}.
     In a tournament of \(N\) players \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
     for \(q^{(i)} \in \R_{[0, 1]} ^ 4\)
     defection is stable if the transition probabilities of the
-    opponents satisfy conditions Eq. \ref{eq:defection_condition_one} and Eq. \ref{eq:defection_condition_two}.
+    opponents satisfy conditions Equation~(\ref{eq:defection_condition_one}) and Equation~(\ref{eq:defection_condition_two}).
 
     \begin{equation}\label{eq:defection_condition_one}
         \sum_{i=1} ^ N (c^{(i)} \bar{a}^{(i)} - \bar{c}^{(i)} a^{(i)}) \leq 0
@@ -580,11 +580,11 @@ in Fig.~\ref{fig:stability_of_defection}.
     \includegraphics[width=.4\linewidth]{img/stability_of_defection_plots.pdf}
     \caption{A. For \(q_{1}=(0.22199, 0.87073, 0.20672, 0.91861)\),
     $q_{2}=(0.48841, 0.61174, 0.76591, 0.51842)$ and
-    $q_{3}=(0.2968, 0.18772, 0.08074, 0.73844)$, Eq.~\ref{eq:defection_condition_one} and
-    Eq.~\ref{eq:defection_condition_two} hold and Defector takes over the
+    $q_{3}=(0.2968, 0.18772, 0.08074, 0.73844)$, Equation~(\ref{eq:defection_condition_one}) and
+    Equation~(\ref{eq:defection_condition_two}) hold and Defector takes over the
     population. B. For $q_{1}=(0.96703, 0.54723, 0.97268, 0.71482)$,
     $q_{2}=(0.69773, 0.21609, 0.97627, 0.0062)$ and
-    $q_{3}=(0.25298, 0.43479, 0.77938, 0.19769)$, Eq.~\ref{eq:defection_condition_one} fails
+    $q_{3}=(0.25298, 0.43479, 0.77938, 0.19769)$, Equation~(\ref{eq:defection_condition_one}) fails
     and Defector does not take over the population.
     These results have been obtained by using~\cite{axelrodproject} an open
     source research framework for the study of the IPD.}\label{fig:stability_of_defection}
