--- a/template_submissions_to_scientific_reports/main.tex
+++ b/template_submissions_to_scientific_reports/main.tex
@@ -451,9 +451,9 @@ strategy was designed to adapt and was shown to be evolutionary stable. The
 findings of this work show that an optimal strategy acts in the same way.
 
 The difference between best responses in tournaments without and with self interactions
-is further explored by Fig.~\ref{fig:behaviour_violin_plots}.
+is further explored by Figure~\ref{fig:behaviour_violin_plots}.
 Though, no statistically significant differences have been found, from
-Fig.~\ref{fig:behaviour_violin_plots}, it seems that the best
+Figure~\ref{fig:behaviour_violin_plots}, it seems that the best
 response that incorporate self interactions has a higher median $p_2$; which corresponds to the probability of cooperating
 after receiving a defection. Thus, they are more likely to forgive after
 being tricked. This is due to the fact that they could be playing against
@@ -513,8 +513,8 @@ dimensions). As a result, the analysis of this section is based on a total of
 152 trials. As before, for each trial \(N=2\) random opponents have been selected.
 
 The ratio between Gambler's utility and the best response memory-one strategy's utility has been calculated and its distribution in
-given in Fig.~\ref{fig:utilities_gambler_mem_one}.
-It is evident from Fig.~\ref{fig:utilities_gambler_mem_one} that
+given in Figure~\ref{fig:utilities_gambler_mem_one}.
+It is evident from Figure~\ref{fig:utilities_gambler_mem_one} that
 Gambler always performs as well as the best response memory-one strategy and often performs better. There are
 no points where the ratio value is less than 1, thus Gambler never performed less
 than the best response memory-one strategy and in places outperforms it.
@@ -573,7 +573,7 @@ as stated in Lemma~\ref{lemma:stability_of_defection}.
 The proof of Lemma~\ref{lemma:stability_of_defection} is given in the
 Supplementary Information and a numerical simulation
 demonstrating the result is given
-in Fig.~\ref{fig:stability_of_defection}.
+in Figure~\ref{fig:stability_of_defection}.
 
 \begin{figure}[!htbp]
     \centering
