points that the proof of theorem 2 is in the SI

--- a/template_submissions_to_scientific_reports/main.tex
+++ b/template_submissions_to_scientific_reports/main.tex
@@ -294,6 +294,8 @@ Theorem~\ref{memone_group_best_response}.
     
 \end{theorem}
 
+The proof of Theorem~\ref{memone_group_best_response} is given in
+the Supplementary Information.
 Finding best response memory-one strategies is analytically feasible using the
 formulation of Theorem~\ref{memone_group_best_response} and resultant
 theory~\cite{Jonsson2005}. However, for large systems building the resultant
