add diff file to response

--- a/response/main.tex
+++ b/response/main.tex
@@ -3,6 +3,7 @@
 \setlength\parindent{0pt}
 \setlength{\parskip}{1em}
 \usepackage{authblk}
+\usepackage{pdfpages}
 
 \title{Stability of defection, optimisation of strategies and the limits of
 memory in the Prisoner's Dilemma RESPONSE TO REVIEWS}
@@ -155,5 +156,12 @@ We have made this suggested change.
 \end{verbatim}
 
 We have made this suggested change.
+
+\section{Marked changes made to the manuscript}
+
+We are also attaching a copy of the revised manuscript where we have highlighted
+the changes made to the originally submitted manuscript.
+
+\includepdf[pages=-]{../diff.pdf}
 
 \end{document}
