fixes citation style

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -453,7 +453,7 @@ author = "Matsui, Akihiko",
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOFTWARE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@software{nikoleta_glynatsi_2019,
+@article{nikoleta_glynatsi_2019,
   author       = {Nikoleta E. Glynatsi and
                   Vince Knight},
   title        = {{Nikoleta-v3/Memory-size-in-the-prisoners-dilemma: 
