--- a/main.tex
+++ b/main.tex
@@ -512,7 +512,7 @@ probability \(x_k\) is given by:
 
 where:
 
-\[ \gamma_i = \frac{ p_{k, k - 1} }{ p_{k, k + 1} } \]
+\[ \gamma_i = \frac{ p_{k, k - 1} }{ p_{k, k + 1} }. \]
 
 In the case considered here \(k\) is the number of best response players in the
 population, so that \(N - k\) is the number of opponents.
@@ -525,12 +525,14 @@ Thus for every value of \(k\) there is a different best response player.
 
 In the case of the best response player the transition probabilities depend on the payoff matrix \(A ^ {(k)}\) where:
 
-\(A ^ {(k)}_{11}\) is the long run utility of the best response player against itself.
-\(A ^ {(k)}_{12}\) is the long run utility of the best response player against the opponent.
-\(A ^ {(k)}_{11}\) is the long run utility of the opponent against the best response player.
-\(A ^ {(k)}_{11}\) is the long run utility of the opponent against itself.
+\begin{itemize}
+\item \(A ^ {(k)}_{11}\) is the long run utility of the best response player against itself.
+\item \(A ^ {(k)}_{12}\) is the long run utility of the best response player against the opponent.
+\item \(A ^ {(k)}_{11}\) is the long run utility of the opponent against the best response player.
+\item \(A ^ {(k)}_{11}\) is the long run utility of the opponent against itself.
+\end{itemize}
 
-The matrix \(A ^ {(k)}\) is calculated using (\ref{eq:optimisation_quadratic})
+The matrix \(A ^ {(k)}\) is calculated using Eq. (\ref{eq:optimisation_quadratic})
 for each value of \(k\) once the best response dynamics algorithm has calculated
 the best response player.
 
