--- a/main.tex
+++ b/main.tex
@@ -542,8 +542,8 @@ Using this, the total utilities/fitnesses for each player can be written down:
 
 \[f_2^{(k)} = (k) A_{21}^{(k)} + (N - k - 1)A_{22}^{(k)}\]
 
-(\(f_1^{(k)}\) is the fitness of the best response player, and \(f_2^{(k)}\) is
-the fitness of the opponent)
+where \(f_1^{(k)}\) is the fitness of the best response player, and \(f_2^{(k)}\) is
+the fitness of the opponent.
 
 Using this:
 
