adds response to reviewers
These are just notes

--- a/response/cover_letter.tex
+++ b/response/cover_letter.tex
@@ -20,6 +20,7 @@ our gratitude to the reviewers for their thoughtful comments and suggestions. We
 have fully taken their comments on board and made significant modifications to
 both the mathematical arguments and the narrative. We feel this has greatly
 improved the work.
+%TODO say we are sorry that the evolutionary part was misleading.
 
 Please find attached a point-by-point response to reviewer's concerns. We hope
 that you find our responses satisfactory.
